--- a/FileExplorer/App.xaml
+++ b/FileExplorer/App.xaml
@@ -2,4 +2,6 @@
     x:Class="FileExplorer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FileExplorer"/>
+    xmlns:local="using:FileExplorer">
+
+</Application>
